<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AxisStruct" Id="{9732127f-85ab-48d1-a591-d13402fe3665}">
    <Declaration><![CDATA[TYPE ST_AxisStruct :
STRUCT
    stControl: ST_AxisControl;
    stStatus: ST_AxisStatus;
    stConfig: ST_AxisConfig;
    stError: ST_AxisError;
    stInputs: ST_AxisInputs;
    stDescription: ST_AxisDescription;
    //The NC axis link to the hardware that is controlling
    Axis: AXIS_REF;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>