<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MotionFunctions" Id="{7dfb6efd-1034-45c3-ba43-5dc10decbfbc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MotionFunctions :
(
    eMoveAbsolute := 0,
    eMoveRelative := 1,
    eMoveVelocity := 2, //Continous moving at a set velocity once bExecute goes high
    eMoveModulo := 3, //Move for 360 deg rotation, see Beckhoff docs
    eGearInMultiMaster := 4, //Gears in this axis to be the slave of the axis specified in stMultiMasterAxis with the ratio specified
    eGearOut := 5, //Removes gearing set in the above command
    eHome := 10, //Run the homing routine for the axis
    eWriteParameter := 50, //Writes the set value to the set parameter once bExecute goes high
    eReadParameter := 60 //Reads a single Parameter
) := eHome; //Home is the default behaviour of the axis.
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>